添加百度收录

--- a/关于我/index.html
+++ b/关于我/index.html
@@ -443,6 +443,31 @@
 
 
 
+  
+
+  
+  
+    <div class="post bg-white">
+      <script src="https://utteranc.es/client.js"
+            repo= "gaocarri/comments-for-blog"
+            issue-term="pathname"
+            theme="github-light"
+            crossorigin="anonymous"
+            async>
+      </script>
+    </div>
+  
+
+  
+
+  
+
+  
+
+    
+
+  
+
         </div>
       </div>
     </main>
