--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 
 
+<link rel="stylesheet" href="/css/">
+
 
 <meta property="og:title" content="卡里的技术博客" />
 <meta property="og:description" content="卡里的技术博客,主要关注于前端开发，前端开发的个人博客网站" />
@@ -80,6 +82,17 @@
   <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
 <![endif]-->
 
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-154009244-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 
 
 
@@ -226,7 +239,7 @@
       <div class="modal-body">
           <script>
             (function() {
-              var cx = '002186711602136249422:q1gkomof_em';
+              var cx = '015885799274435903025:9g3qczbcvxd';
               var gcse = document.createElement('script');
               gcse.type = 'text/javascript';
               gcse.async = true;
@@ -403,7 +416,7 @@
           <a href="http://gaocarri.top/categories/javascript/"> JavaScript </a>
           
         </div>
-      <span class="more-meta"> 约 2015 字 </span>
+      <span class="more-meta"> 约 2011 字 </span>
       <span class="more-meta"> 预计阅读 5 分钟 </span>
       
         <span class="more-meta"> <a href="http://gaocarri.top/post/%E4%BD%BF%E7%94%A8promise/#disqus_thread">评论</a> </span>
@@ -715,21 +728,7 @@
 
 
 
-<script id="baidu_push">
-  (function(){
-    if (window.location.hostname === 'localhost') return;
-    var bp = document.createElement('script'); bp.async = true;
-    var curProtocol = window.location.protocol.split(':')[0];
-    if (curProtocol === 'https') {
-      bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
-    }
-    else {
-      bp.src = 'http://push.zhanzhang.baidu.com/push.js';
-    }
-    var s = document.getElementsByTagName("script")[0];
-    s.parentNode.insertBefore(bp, s);
-  })();
-</script>
+
 
 
 
@@ -772,6 +771,8 @@
 
 
 
+
+  <script src="/js/"></script>
 
 
 </body>
