--- a/关于我/index.html
+++ b/关于我/index.html
@@ -58,6 +58,8 @@
 
 
 
+<link rel="stylesheet" href="/css/">
+
 
 <meta property="og:title" content="关于我" />
 <meta property="og:description" content="近期在听的音乐 最近在玩明日方舟&hellip; 关于我 因为喜欢前曼联球星Carrick 所以叫Carri 来自安徽马鞍山 高中毕业于马鞍山二中 本科毕" />
@@ -89,6 +91,17 @@
   <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
 <![endif]-->
 
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-154009244-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 
 
 
@@ -235,7 +248,7 @@
       <div class="modal-body">
           <script>
             (function() {
-              var cx = '002186711602136249422:q1gkomof_em';
+              var cx = '015885799274435903025:9g3qczbcvxd';
               var gcse = document.createElement('script');
               gcse.type = 'text/javascript';
               gcse.async = true;
@@ -592,21 +605,7 @@
 
 
 
-<script id="baidu_push">
-  (function(){
-    if (window.location.hostname === 'localhost') return;
-    var bp = document.createElement('script'); bp.async = true;
-    var curProtocol = window.location.protocol.split(':')[0];
-    if (curProtocol === 'https') {
-      bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
-    }
-    else {
-      bp.src = 'http://push.zhanzhang.baidu.com/push.js';
-    }
-    var s = document.getElementsByTagName("script")[0];
-    s.parentNode.insertBefore(bp, s);
-  })();
-</script>
+
 
 
 
@@ -649,6 +648,8 @@
 
 
 
+
+  <script src="/js/"></script>
 
 
 </body>
